--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Sean McKnelly's Cybersecurity Blog # the main title
+title: Sean McKnelly's Tech Blog # the main title
 
 tagline: # it will display as the subtitle
 
